--- a/src/vars.css
+++ b/src/vars.css
@@ -1,6 +1,6 @@
 :root {
     --color-text:#FFF;
-    --color-primary:#576cbc;
+    --color-primary:#576bbc;
     --color-secondary:#19376d;
     --color-dark : #0b2447;
     --color-bg:#04152d;
