--- a/src/App.module.css
+++ b/src/App.module.css
@@ -49,7 +49,8 @@ to red when i have time ======================================================
 @import './vars.css';
 
 .App {
-  background-color: var(--color-bg);
+  /* background-color: var(--color-bg); */
+  background-color: rgb(26, 26, 26);
   color:aliceblue;
   width: 100%;
   height: 100%;
