--- a/src/Components/Hero/Hero.module.css
+++ b/src/Components/Hero/Hero.module.css
@@ -9,6 +9,9 @@
     height: 100vh;
     justify-content: space-between;
 }
+.container .content {
+    z-index: 1;
+}
 .container h1 {
     font-size: 40px;
     text-align: center;
@@ -16,6 +19,7 @@
     margin-top: 200px;
     margin-bottom: 30px;
     letter-spacing: 1px;
+    z-index: 1;
 }
 .container p {
     width: 600px;
@@ -23,7 +27,7 @@
     line-height: 1.9;
     text-align: center;
     color: rgba(239, 237, 237, 0.842);
-    
+    z-index: 2;
 }
 .container a {
     display: block;
@@ -47,19 +51,63 @@
     border-radius: 50%;
     align-self: center;
     justify-self: end;
+    animation-name: floating;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-out;
+    z-index: 1;
 }
+@keyframes floating {
+    0%{
+        transform: translate(0,0px);
+    }
+    50%{
+        transform: translate(0 , 10px);
+    }
+    100%{
+        transform: translate(0 , 0px);
+    }
+}
+.topBlur {
+    position: absolute;
+    width: 400px;
+    height: 400px;
+    background-color: rgba(25, 55, 109, 0.7);
+    top: 60px;
+    left: 80px;
+    filter: blur(100px);
+}
+.bottomBlur {
+    position: absolute;
+    width: 300px;
+    height: 200px;
+    background-color: rgba(25, 55, 109, 0.7);
+    bottom: 160px;
+    right: 135px;
+    filter: blur(100px);
+    border: 765px;
+    z-index: 0;
+}
+
 @media (max-width : 1171px){
     .container{
         flex-direction: column-reverse;
         align-items: center;
         margin-bottom: 0;
+        gap: 0;
+        justify-content: space-around;
+    }
+    .container .content {
+        margin-top:-160px;
     }
     .container img {
-        width: 400px;
-        
+        width: 350px;
+        margin-top: -30px;
+        margin-bottom: 0;
     }
     .container h1 {
         margin-top: 0;
+        margin-bottom: 10px;
     }
     .container p {
         max-width: 70%;
