--- a/src/Components/Hero/Hero.module.css
+++ b/src/Components/Hero/Hero.module.css
@@ -7,6 +7,7 @@
     width: 80%;
     margin-left: auto;
     margin-right: auto;
+    padding-top: 80px;
     height: 100vh;
     justify-content: space-between;
 }
@@ -53,12 +54,13 @@
     overflow: hidden;
     border-radius: 50%;
     align-self: center;
-    justify-self: end;
+    
     animation-name: floating;
     animation-duration: 3s;
     animation-iteration-count: infinite;
     animation-timing-function: ease-out;
     z-index: 1;
+    margin-top: -100px;
 }
 @keyframes floating {
     0%{
@@ -98,6 +100,7 @@
         align-items: center;
         margin-bottom: 0;
         gap: 0;
+        padding-top: 80px;
         justify-content: space-around;
     }
     .container .content {
@@ -116,5 +119,10 @@
         max-width: 80%;
         margin-left: auto;
         margin-right: auto;
+    }
+}
+@media (max-width : 829px){
+    .container{
+        padding-top: 0;
     }
 }
