--- a/src/Components/Navbar.module.css
+++ b/src/Components/Navbar.module.css
@@ -3,13 +3,15 @@
 
 nav {
     display: flex;
-    /* justify-content: space-between; */
-    justify-content: center;
-    margin: 0 10%;
-    height:  0px;
-    position: relative;
+    justify-content: space-between;
+    
+    background: rgba(19, 20, 27, 0.764);
+    width: 100%;
+
+    position: fixed;
     height: 70px;
-    padding: 20px
+    padding: 20px 10% ;
+    z-index: 111;
 }
 nav>a {
     font-size: 21px;
@@ -18,20 +20,38 @@ nav>a {
     text-transform: uppercase;
     text-shadow: 3px 1px 16px #8098f8 ;
     background-color:#ccc;
+    z-index: 111;
+}
+.logo {
+    width: 50px;
+    
+;
+    
+
+}
+.logo img {
+    margin-top: -10px;
+    margin-bottom: auto;
+    border-radius: 50%;
 }
 
 .menu {
-    /* justify-content: space-between; */
+    display: block;
+    
+    justify-content: space-between;
     color:var(--color-text);
+
+    margin-left: auto;
+    text-align: center;
     
     
 }
 .menuItems {
     display: flex;
-    gap: 30px;
+    gap: 6%;
 }
 .menuItems li a {
-    transition: .5s;
+    transition: 0.9s;
     transition-timing-function: ease;
     color: #e9e6e6;
     font-size: 19px;
@@ -39,12 +59,14 @@ nav>a {
     border-radius: 10px;
     display: block;
     margin-bottom: 0;
+    transition: 0.6s;
+
     
 }
 .menuItems li a:hover {
-    color:white;
     
-    /* margin-bottom: 20px; */
+    
+    
     
     
     background-color:var(--color-dark);
@@ -56,6 +78,8 @@ nav>a {
 menu .icon {
 display: none;
 width: 30px;
+margin-right: auto;
+margin-left: 0;
 
 }
 .menu .icon span {
@@ -76,9 +100,15 @@ width: 30px;
     font-size: 30px;
 
 }
+@media(max-width :990px){
+    nav {
+        padding:20px 15%;
+    }
+}
 @media (max-width : 830px){
     nav {
-        justify-content: right;
+        justify-content: space-between;
+        position: relative;
     } 
     .menuItems {
         flex-direction: column;
@@ -89,15 +119,25 @@ width: 30px;
         top: -182px;
         right: 15px;
         border-radius: 4px;
-        padding: 30px;
+        padding: 30px 20px;
         text-align: center;
         /* display: none; */
         box-shadow: 0 0 4px 0 rgba(0,0,0,0.15);
         z-index: 2;
-        transition: 0.4s;
+        transition: 0.5s;
         opacity: 0;
+        width: 60%;
+    
+    }
+    .menuItems ul {
+        width: 80%;
+    }
+    .menuItems ul li a {
         
     
+        transition: 0.6s;
+        
+        
     }
     .menu .icon span {
         display: block;
