--- a/src/Components/Footer/Footer.module.css
+++ b/src/Components/Footer/Footer.module.css
@@ -1,7 +1,7 @@
-footer {
+.footer {
     background-color: black;
 }
-footer div p {
+.footer div p {
     font-size: 20px;
     font-weight: 500;
     text-align: center;
