--- a/src/Components/Hero/Hero.module.css
+++ b/src/Components/Hero/Hero.module.css
@@ -10,6 +10,7 @@
     padding-top: 80px;
     height: 100vh;
     justify-content: space-between;
+
 }
 .container .content {
     z-index: 1;
@@ -104,11 +105,11 @@
         justify-content: space-around;
     }
     .container .content {
-        margin-top:-160px;
+        margin-top:-50px;
     }
     .container img {
         width: 340px;
-        margin-top: -80px;
+        margin-top: -20px;
         margin-bottom: 0;
     }
     .container h1 {
@@ -122,7 +123,13 @@
     }
 }
 @media (max-width : 829px){
-    .container{
-        padding-top: 0;
+    .container .content{
+        padding-top:0px;
+    }
+    .container  img {
+        margin-top: -100px;
     }
 }
+
+
+
